crates/courier-ftp-proto/tests/snapshots/snapshots__account_delete_request.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&AccountDeleteRequest { reauth_token: \"t\".repeat(43), })"
---
{
  "reauth_token": "ttttttttttttttttttttttttttttttttttttttttttt"
}
