crates/courier-ftp-proto/tests/snapshots/snapshots__create_org_request.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&CreateOrgRequest { name: \"Acme\".into(), })"
---
{
  "name": "Acme"
}
