crates/courier-ftp-proto/tests/snapshots/snapshots__error_envelope_no_retry.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&ErrorEnvelope::new(ErrorCode::NotFound, \"not found\", None))"
---
{
  "error": {
    "code": "not_found",
    "message": "not found"
  }
}
