crates/courier-ftp-proto/tests/snapshots/snapshots__invite_accepted.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&InviteAccepted { org_id: id(7), role: Role::Member, })"
---
{
  "org_id": "0192f0c4-7a10-7c3e-9a55-0f6b2c1d3e07",
  "role": "member"
}
